# revenda-fullstack

./: README.md
backend/: Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/api/: models.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/cliente/: admin.py  models.py  serializers.py  views.py
backend/cliente/migrations/: 0001_initial.py  0002_remove_cliente_data_cadastro_remove_cliente_email_and_more.py
backend/estoque/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/estoque/migrations/: 0001_initial.py
backend/pagamento/: admin.py  models.py  serializers.py  urls.py  views.py
backend/pedido/: admin.py  models.py  serializers.py  signals.py  views.py
backend/pedido/migrations/: 0001_initial.py
backend/produto/: admin.py  models.py  serializers.py  urls.py  views.py
backend/produto/migrations/: 0001_initial.py
backend/ressuprimento/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/revendedor/: admin.py  models.py  serializers.py  urls.py  views.py
frontend/: .env  Dockerfile  fly.toml  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: PerfilRevendedora.jsx  ProtectedRoute.jsx
frontend/src/pages/: Clientes.jsx  Fornecedores.jsx  Login.jsx  Login.module.css  Pagamentos.jsx  Painel.jsx  Pedidos.jsx  Produtos.jsx  Recebimentos.jsx  Ressuprimentos.jsx  Usuarios.jsx
frontend/src/styles/: Form.css  Home.css  LoadingIndicator.css
(+23 files in other folders)
